- added support for lutime() to restore atime/mtimes of symlink on system
  that supports it.
- removed backward compatible API with old libdar 4.4.x
- simplified implementation of archive isolation made possible thanks to
  archive isolation evolution features brought by release 2.4.0.
- added feature: exclude-by-ea. Avoid saving inodes that have a particular
  EA set.

from 2.4.12 to 2.4.13
- adding initialization value for two variable to avoid unappropriate warning
  when compiling with -Wall option
- reducing UNIX_PATH_MAX when not defined from 108 to 104 bytes to accomodate BSD systems
- fixing assignment operator of class criterium that was not returning any value
- adding support for back-slash of quoting characters in DCF files
- fixed compilation issues with clang / FreeBSD
- fixed compilation warning due to deprecated symbols in libgcrypt header files
- rewrote gnu make specific rules to legacy ones
- removed old unused stuff from misc subdirectory
- adding warning at compilation time if libgcrypt used is older than 1.6.0
- adding warning at execution time if hash computation is requested with slices
  greater than 256 Gio and ligbcrypt dynamically or statically linked is older
  than 1.6.0
- fixed bug in hourshift (-H option) when comparing dates from an old extracted
  catalogue (archive format 7 or older).


from 2.4.11 to 2.4.12
- for correctness fixed delete vs delete[] on vector of char (not incidence
  reported)
- fixed out of range access in routine used to read very old archive format
- fixed error in logical expression leading a sanity test to be useless
- removed duplicated variable assignment
- updated FAQ
- fixed typo and spelling errors
- fixed bug (reported by Torsten Bronger) in the escape layer leading libdar
  to wrongly reporting a file as corrupted at reading time
- fixed bug in the sparse file detection mechanism that lead the minimum size
  hole detection to become a multiple of the default value or specified one.