@@ -75,7 +75,7 @@ checks the backup integrity. Even without compression, dar is able to detect at 
 compares saved files in the backup with those in the filesystem. <basename> may also be "-" (see -x option above for details).
 .TP 20
 -C, --isolate [<path>/]<basename>
-isolate a catalogue from its archive. The argument is the basename of the file that will contain the catalogue. The -A option is mandatory here to give the name of the archive to extract the catalogue from. Slicing is available (-s -S -p -b etc.). If the filename is "-" *and* no slice is asked (no -s option) the isolated catalogue is produced on the standard output, allowing the user to send the resulting archive through a pipe. Note that there is no difference in concept between an isolated catalogue and an archive. Thus you can do all operation on an isolated catalogue, in particular take it as reference for a differential archive. An archive produced with -C is almost equivalent to differential archive done right after a full backup, (no data is in it). Since release 2.4.0 you can use an isolated catalogue to rescue the internal catalogue when it is corrupted (see -A option).
+isolate a catalogue from its archive (that's to say make a copy of it in its own archive container). The argument is the basename of the file that will contain the catalogue. The -A option is mandatory here to give the name of the archive to copy the catalogue from. Slicing is available (-s -S -p -b etc.). If the filename is "-" *and* no slice is asked (no -s option) the isolated catalogue is produced on the standard output, allowing the user to send the resulting archive through a pipe. Note that there is quite no difference in concept between an isolated catalogue and an archive. Thus you can do all operations on an isolated catalogue, in particular take it as reference for a differential archive. Note however that comparison (-d option) relies on embedded CRC rather than comparing byte by byte the data (what is done for normal archive), and no comparison can be performed concerning EA or FSA even if each of them have their own CRC in the catalogue (different ordering as provided by the OS of the items composing EA and FSA may lead the CRC to be different while the EA or FSA are exactly the same). An archive produced with -C is almost equivalent to a differential archive done right after a full backup, (no data is in it). Since release 2.4.0 you can use an isolated catalogue to rescue the corrupted internal catalogue of the archive it has been based on (see -A option).
 .TP 20
 -+, --merge [<path>/]<basename>
 create a subset archive from one or two existing archives (the resulting archive name is the argument to this command). The dar file selection mechanism (see below) let the user decide which files will be present in the resulting archive and which one will be ignored. This option thus let the user merge two archives in a single one (with a filtering mechanism that accepts all files), as well as this option let the user create a smaller archive which data is taken from one or two archives of reference. Note that at no time the contents of the archives of reference is extracted to real files and directories: this is an archive to archive transfer, thus you may lack support for Extended Attribute while you will be able to fully manipulate files with their Extended Attributes from one archive to the resulting one. If the basename is "-" *and* no slice is asked (no -s option), the archive is produced on standard output allowing the user to send the resulting archive through a pipe. The first mandatory archive of reference if provided thanks to the -A option, while the second "auxiliary" (and optional) archive of reference is provided thanks to the -@ option. When a tie contention occurs (same file names from both archive have to be merged), the overwriting policy (-/ option) is used to define the one to keep in the resulting archive. By default, archive data selected for merging is uncompressed, and re-compressed. Thus the merging operation can be used to change compression algorithm of given archive as well as change its encryption. But, for better performance it is also possible thanks to the -ak option (see below the -ak option for usage restrictions) to merge files keeping them compressed, thus no decompression/re-compression is performed at all, which make the operation faster. Last it is not possible to merge two isolated catalogues.
